--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,10 +6,12 @@ import { SITE_TITLE } from '../consts';
 <header>
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
-		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/about">DM Wasem</HeaderLink>
-		</div>
+                <div class="internal-links">
+                        <HeaderLink href="/">Home</HeaderLink>
+                        <HeaderLink href="/about">DM Wasem</HeaderLink>
+                        <HeaderLink href="/dashboard">GM Command</HeaderLink>
+                        <HeaderLink href="/player-hub">Player Hub</HeaderLink>
+                </div>
 	</nav>
 </header>
 
