Add GM Hub login page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,11 +8,12 @@ import { SITE_TITLE } from '../consts';
 		<h2><a href="/">{SITE_TITLE}</a></h2>
                 <div class="internal-links">
                         <HeaderLink href="/">Home</HeaderLink>
+                        <HeaderLink href="/gm-hub">GM Hub</HeaderLink>
                         <HeaderLink href="/about">DM Wasem</HeaderLink>
                         <HeaderLink href="/dashboard">GM Command</HeaderLink>
                         <HeaderLink href="/player-hub">Player Hub</HeaderLink>
                 </div>
-	</nav>
+        </nav>
 </header>
 
 <style>
